--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,8 @@
     <meta property="twitter:image" content="<%= BASE_URL %>/static/media/seo-background.png">
     <meta property="twitter:card" content="summary_large_image">
 
-	  <link rel="manifest" href="<%= BASE_URL %>/manifest.json" />
+    <link rel="manifest" href="<%= BASE_URL %>/manifest.json" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
