--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,7 +42,7 @@
     <meta property="twitter:card" content="summary_large_image">
 
     <link rel="manifest" href="<%= BASE_URL %>/manifest.json" />
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Montserrat|Oswald|Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
