[front/feature] seo mixin for title [issue #23]

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Station F | Technical test</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Station F | Technical test" />
     <meta name="description" content="Booking a meeting room has never been easier." />
-    <meta name="robots" content="index follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="VueJS, Node.js, Express, MongoDB">
@@ -19,7 +16,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:locale" content="en_EN"/>
     <meta property="og:site_name" content="Station F Booking"/>
-    <meta property="og:title" content="Station F | Technical test" />
+    <meta property="og:title" content="Station F | Book Meeting Rooms" />
     <meta property="og:url" content="<%= BASE_URL %>" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Booking a room has never been easier." />
@@ -28,14 +25,14 @@
     <meta property="og:image:secure_url" content="<%= BASE_URL %>/static/media/seo-background.png">
 
     <!-- Google+ / Schema.org -->
-    <meta itemprop="name" content="Station F | Technical test" />
-    <meta itemprop="headline" content="Station F | Technical test" />
+    <meta itemprop="name" content="Station F | Book Meeting Rooms" />
+    <meta itemprop="headline" content="Station F | Book Meeting Rooms" />
     <meta itemprop="description" content="Booking a room has never been easier." />
     <meta itemprop="image" content="<%= BASE_URL %>/static/media/seo-background.png">
     <meta itemprop="author" content="Damien LAURENT-NAUGUET"/>
 
     <!-- Twitter -->
-    <meta property="twitter:title" content="Station F | Technical test" />
+    <meta property="twitter:title" content="Station F | Book Meeting Rooms" />
     <meta property="twitter:url" content="<%= BASE_URL %>" />
     <meta property="twitter:description" content="Booking a room has never been easier." />
     <meta property="twitter:image" content="<%= BASE_URL %>/static/media/seo-background.png">
